# dna-trait-analysis

./: .gitignore  DEVLOG.md  LICENSE  README.md  align_features.py  combine_results.py  data_tools.py  evaluation.py  experiments.py  logger.py  plot_all_gene.py  prep_data.py  pyproject.toml  requirements.txt  run_all.py  save_metadata.sh  setup.py  test.py  train.py
configs/: default.yaml  default_small.yaml  dev.yaml  hindwing_variant.yaml
dataloading/: path_collectors.py
models/: forward.py  net.py
notebooks/: aggregate-edits.ipynb  align-positions.ipynb  attribution-by-editing.ipynb  collect_gene_data.ipynb  compute_pvalue.ipynb  create-chromosome-performance-figure.ipynb  create_attribution.ipynb  editing_dashboard.ipynb  editing_viewer.ipynb  explore_data.ipynb  extract-features.ipynb  find_epistasis.ipynb  find_epistasis_via_nn.ipynb  heliconius_gene_editing_dashboard.ipynb  manhattan-plot.ipynb  model-lrp-investigation.ipynb  plot-whole-genome.ipynb  plot_attribution.ipynb  plot_large_chromosome.ipynb  plot_large_chromosome_knock_out.ipynb  plot_large_chromosome_single.ipynb  plot_region.ipynb  plot_whole_genome copy.ipynb  plot_whole_genome.ipynb  preprocessing_pipeline.ipynb  run_pipeline.ipynb  view-training-results.ipynb  view_data.ipynb  visualize_aggregated_edit.ipynb
notes/: lrp-investigation.md
scripts/: ad_hoc.sh  extract_all_projection_matrices.sh  find_epistasis.py  one_run.sh  process_all_attributions.sh  test.sh  train_erato.sh  train_erato_hindwing.sh  train_erato_large.sh  train_erato_large_total_color.sh  train_melpomene.sh  train_melpomene_large.sh  train_melpomene_large_total_color.sh  train_whole_genome_all.sh  train_whole_genome_all_at_once.sh  train_whole_genome_erato.sh  train_whole_genome_melpomene.sh  update_dev_env.sh
src/gtp/: adhoc.py  (+21 more)
tests/: test_config_loading.py  (+1 more)
(+64 files in other folders)
